# img-to-vector

./: .gitignore  README.md  img_to_vector.py  pyproject.toml
.clienrules/: standard.md
